--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "Comments",
-	"description": "Chat with express.io",
+	"name": "Portfolio",
+	"description": "My portfolio",
 	"version": "0.1.0",
 	"dependencies":
 	{
 		"express": "4.13.4",
 		"ejs": "2.4.1"
 	},
-	"author": "Kamipown <paul.delobbel@gmail.com>"
+	"author": "Kamipown <manon.noblet@epitech.eu>"
 }
